# playbook-redline

./: .dockerignore  .env.example  .gitignore  BACKEND_COMPLETENESS.md  BITGET_DEMO_TRADING_NOTES.md  CODEX_GOAL_BACKEND_V2.md  CODEX_GOAL_BACKEND_V3_RECOMMENDED.md  CODEX_PROGRESS.md  DEPLOYMENT.md  Dockerfile  HACKATHON_SUBMISSION.md  LICENSE  Makefile  PRODUCTION_RELEASE_BACKEND.md  README.md  README_CN.md  SERVICE_API.md  action.yml  pyproject.toml  render.yaml
.github/workflows/: pages.yml  redline-ci.yml  verify-evidence.yml
artifacts/sponsor/: demo-readback.json
docs/: VIOLATION_CODES.md
fixtures/specs/: redline_spec.json
fixtures/suites/: btc_chop.csv  btc_crash.csv  (+1 more)
schemas/: decision-envelope.v1.schema.json  doctor-result.v1.schema.json  edit-provenance.v1.schema.json  execution-evidence.v1.schema.json  execution-ledger-entry.v1.schema.json  ledger-attestation.v1.schema.json  ledger-checkpoint.v1.schema.json  package-annotation.v1.schema.json  package-import.v1.schema.json  playbook-identity-lock.v1.schema.json  proof-verification.v1.schema.json  proof.v1.schema.json  publish-preflight.v1.schema.json  receipt.v3.2.schema.json  receipt.v3.3.schema.json  release-attestation.v1.schema.json  release-audit-entry.v1.schema.json  release-evidence-bundle.v1.schema.json  release-evidence-manifest.v1.schema.json  report.v1.schema.json  service-openapi.json  spec.v2.1.schema.json  spec.v2.2.schema.json  sponsor-readback-evidence.v1.schema.json  sponsor-step-result.v1.schema.json  suite.v2.schema.json  verification-result.v1.schema.json
scripts/: _frontend-render-check.cjs  build-pages.py  check-design-tokens.sh  check-frontend-render.sh  check-frontend-zero-secret.sh  check-verdict-path-imports.py  deployment-smoke.sh  execution-demo.sh  export-service-openapi.py  frontend-demo-flow.py  gen-gallery.py  gen-violation-catalog.py  hackathon-submit-check.sh  release-demo.sh  remote-production-check.py  remote-smoke-actions.sh  remote-smoke.sh  render-blueprint-preflight.sh  service-cleanup.py  service-smoke.sh  tamper-demo.sh  verify-sponsor-fixture.py  verify-sponsor-run.sh
submission-evidence/: 01-gate-crash-test.txt  02-verify-release-bundle.txt  03-verify-release-attestation.txt  04-tamper-fail-closed.txt  05-real-bitget-order.json  README.md
tests/: test_backend_p0.py  test_service_api.py
(+264 files in other folders)
