[project]
name = "playbook-redline"
version = "0.1.0"
description = "Proof kernel and verifier for AI-edited Bitget Playbook crash-test receipts."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "typer>=0.12",
  "rich>=13.7",
  "orjson>=3.10",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "hypothesis>=6.112",
]

[project.scripts]
redline = "redline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

