[project]
name = "playbook-redline"
version = "0.1.0"
description = "Proof kernel and verifier for AI-edited Bitget Playbook crash-test receipts."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.128,<0.129",
  "mcp>=1.0",
  "pydantic>=2.8",
  "python-multipart>=0.0.22,<0.1.0",
  "typer>=0.12",
  "rich>=13.7",
  "orjson>=3.10",
  "psycopg[binary]>=3.2,<4",
  "jsonschema>=4.23",
  "cryptography>=43",
  "uvicorn[standard]>=0.38,<0.39",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "hypothesis>=6.112",
]

[project.scripts]
redline = "redline.cli:app"
redline-mcp = "redline.mcp_server:main"
redline-api = "redline.service.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
